--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 h1 {
     color: red;
+}
+
+#map {
+    width: 400px; 
+    height: 300px;
 }
