--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,23 +14,74 @@ body {
 }
 
 .page-container {
-    width: 90%;
+    width: 100%;
+    height: 100vh;
+    max-width: 1500px;
     margin: 0 auto;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
+    overflow: hidden;
+
 }
 
 header {
     height: 100px;
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+button, input {
+    background-color: rgba(0,0,0,0.3);
+    border: black 1px solid;
+    color: whitesmoke;
+    font-size: 14px;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 3px;
+    transition: .3s;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+button:active {
+    scale: 0.99;
+    background-color: rgba(0,0,0,0.6);
+}
+
+button:focus, input:focus {
+    outline: black;
+}
+
+input {
+    cursor: default;
+}
+
+
+
+
+
 main {
-    width: 60%;
+    max-width: 60%;
     float: left;
     display: flex;
     flex-direction: column;
-
+    margin-left: 5%;
+    margin-top: 5%;
 }
 
 .owf {
@@ -40,7 +91,13 @@ main {
 
 aside {
     float: right;
+    margin-right: 5%;
+    margin-top: 10%;
+    min-width: 300px;
+}
 
+main div {
+    padding: 10px 0;
 }
 
 .time-n-loc {
@@ -58,12 +115,14 @@ aside {
 .temp-widget {
     float: left;
     display: flex;
+    flex-direction: column;
+    padding: 20px 0;
 }
 
 .temp-widget > h1 {
     font-size: 60px;
     font-weight: bold;
-    line-height: 100px;
+    line-height: 60px
 }
 
 .temp-widget > .owf {
@@ -72,6 +131,7 @@ aside {
 
 .sum-widget {
     float: left;
+    padding: 20px 40px;
 }
 
 section:last-of-type {
@@ -80,8 +140,17 @@ section:last-of-type {
     justify-content: space-between;
 }
 
-section:last-of-type > h2 {
+section:last-of-type h2 {
     font-size: 30px;
+    padding-bottom: 10px;
+}
+
+section:last-of-type div {
+    text-align: center;
+}
+
+aside p {
+    text-align: right;
 }
 
 #map {
